--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.12",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
